# AISmart

./: README.md  开发日志.md  项目需求.md
Armfb-lvgl/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
Armfb-lvgl/AiSmart/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
Armfb-lvgl/AiSmart/images/: ui_img_1112926375.c  ui_img_1348765827.c  ui_img_1666228798.c  ui_img_1758700865.c  ui_img_1861617944.c  ui_img_2018771700.c  ui_img_345343629.c  ui_img_525561802.c  ui_img_658976223.c  ui_img_794820540.c
Armfb-lvgl/AiSmart/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
Armfb-lvgl/lv_drivers/: lv_drv_conf_template.h
Armfb-lvgl/lvgl/: lv_conf_template.h
UBSDL-lvgl/: AISmart.c  AISmart.h  CMakeLists.txt  SimuTalk.txt  calculator.c  lv_conf.h  lv_drv_conf.h  main.c
UBSDL-lvgl/AiSmart/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
UBSDL-lvgl/AiSmart/fonts/: ui_font_puhui18.c
UBSDL-lvgl/AiSmart/images/: ui_img_1006453824.c  ui_img_1040098182.c  ui_img_1042948001.c  ui_img_105594312.c  ui_img_1056724100.c  ui_img_106759925.c  ui_img_1072915872.c  ui_img_1078335801.c  ui_img_1106867240.c  ui_img_1114756079.c  ui_img_1143713160.c  ui_img_1152444760.c  ui_img_1179136265.c  ui_img_1182216894.c  ui_img_1186072952.c  ui_img_1195015344.c  ui_img_120716944.c  ui_img_1220561086.c  ui_img_1221264709.c  ui_img_1250489853.c  ui_img_1251777188.c  ui_img_1273346190.c  ui_img_1274767758.c  ui_img_1305061770.c  ui_img_1317392200.c  ui_img_1345017118.c  ui_img_1363077134.c  ui_img_1395808306.c  ui_img_1409127908.c  ui_img_1433976870.c  ui_img_1442695620.c  ui_img_1445365126.c  ui_img_1447691688.c  ui_img_1468085881.c  ui_img_1488135120.c  ui_img_1521996747.c  ui_img_15388586.c  ui_img_1542151835.c  ui_img_154984886.c  ui_img_155258266.c  (+97 more)
UBSDL-lvgl/AiSmart/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
UBSDL-lvgl/wenjianbeifen/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
