SET(SOURCES screens/ui_Screen1.c
    screens/ui_Screen4.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_1758698815.c
    images/ui_img_1861617944.c
    images/ui_img_1348765827.c
    images/ui_img_374812091.c
    images/ui_img_1112926375.c
    images/ui_img_1666228798.c
    images/ui_img_658976223.c
    images/ui_img_1056724100.c
    images/ui_img_391371230.c
    images/ui_img_345343629.c
    images/ui_img_395471506.c
    images/ui_img_63016642.c
    images/ui_img_1468085881.c
    images/ui_img_2119297200.c
    images/ui_img_1782681216.c
    images/ui_img_1363077134.c
    images/ui_img_1610904046.c
    images/ui_img_473278995.c
    images/ui_img_1799674937.c
    images/ui_img_2018771700.c
    images/ui_img_459325315.c
    images/ui_img_794820540.c
    images/ui_img_525561802.c
    images/ui_img_1758700865.c
    fonts/ui_font_puhui18.c)

add_library(ui ${SOURCES})
